force-app/main/default/objects/Media_Attachment__c/Media_Attachment__c.object-meta.xml
<CustomObject>
    <label>Media Attachment</label>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Media Attachment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>