force-app/main/default/objects/Media_Attachment__c/fields/Captured_Date__c.field-meta.xml
<CustomField>
    <fullName>Captured_Date__c</fullName>
    <label>Captured Date</label>
    <type>DateTime</type>
</CustomField>