force-app/main/default/objects/Media_Attachment__c/fields/Form_Response__c.field-meta.xml
<CustomField>
    <fullName>Form_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Response</label>
    <referenceTo>Form_Response__c</referenceTo>
    <relationshipLabel>Media Attachments</relationshipLabel>
    <relationshipName>Media_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>