force-app/main/default/objects/Media_Attachment__c/fields/GPS_Longitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Longitude__c</fullName>
    <label>GPS Longitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>